--- a/alNFT/backend/package.json
+++ b/alNFT/backend/package.json
@@ -10,10 +10,27 @@
 		"deploy-local": "npx hardhat run ./scripts/deploy.js --network localhost"
 	},
 	"dependencies": {
-		"dotenv": "^16.0.2"
+		"@alch/alchemy-web3": "^1.4.7",
+		"@openzeppelin/contracts": "^4.8.1",
+		"dotenv": "^16.0.3"
 	},
 	"devDependencies": {
+		"@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+		"@nomicfoundation/hardhat-network-helpers": "^1.0.8",
 		"@nomicfoundation/hardhat-toolbox": "^1.0.2",
-		"hardhat": "^2.10.1"
+		"@nomiclabs/hardhat-ethers": "^2.2.2",
+		"@nomiclabs/hardhat-etherscan": "^3.1.6",
+		"@typechain/ethers-v5": "^10.2.0",
+		"@typechain/hardhat": "^6.1.5",
+		"@types/chai": "^4.3.4",
+		"@types/mocha": "^9.1.1",
+		"chai": "^4.3.7",
+		"ethers": "^5.7.2",
+		"hardhat": "^2.10.1",
+		"hardhat-gas-reporter": "^1.0.9",
+		"solidity-coverage": "^0.7.22",
+		"ts-node": "^10.9.1",
+		"typechain": "^8.1.1",
+		"typescript": "^4.9.5"
 	}
 }
