--- a/alNFT/frontend/package.json
+++ b/alNFT/frontend/package.json
@@ -16,6 +16,7 @@
 		"@mui/material": "^5.11.10",
 		"@rainbow-me/rainbowkit": "^0.8.1",
 		"alchemy-sdk": "^2.4.3",
+		"dotenv": "^16.0.3",
 		"ethers": "^5.7.2",
 		"express": "^4.18.2",
 		"next": "13.1.2",
