--- a/alNFT/backend/package.json
+++ b/alNFT/backend/package.json
@@ -12,7 +12,11 @@
 	"dependencies": {
 		"@alch/alchemy-web3": "^1.4.7",
 		"@openzeppelin/contracts": "^4.8.1",
-		"dotenv": "^16.0.3"
+		"@pinata/sdk": "^2.1.0",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"fs": "^0.0.1-security",
+		"openai": "^3.2.1"
 	},
 	"devDependencies": {
 		"@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
@@ -24,10 +28,12 @@
 		"@typechain/hardhat": "^6.1.5",
 		"@types/chai": "^4.3.4",
 		"@types/mocha": "^9.1.1",
+		"@types/node-fetch": "^2.6.2",
 		"chai": "^4.3.7",
 		"ethers": "^5.7.2",
 		"hardhat": "^2.10.1",
 		"hardhat-gas-reporter": "^1.0.9",
+		"node-fetch": "^3.3.0",
 		"solidity-coverage": "^0.7.22",
 		"ts-node": "^10.9.1",
 		"typechain": "^8.1.1",
