--- a/alNFT/backend/package.json
+++ b/alNFT/backend/package.json
@@ -14,7 +14,7 @@
 		"@openzeppelin/contracts": "^4.8.1",
 		"@pinata/sdk": "^2.1.0",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
+		"express-rate-limit": "^6.7.0",
 		"fs": "^0.0.1-security",
 		"openai": "^3.2.1"
 	},
@@ -27,10 +27,12 @@
 		"@typechain/ethers-v5": "^10.2.0",
 		"@typechain/hardhat": "^6.1.5",
 		"@types/chai": "^4.3.4",
+		"@types/express": "^4.17.17",
 		"@types/mocha": "^9.1.1",
 		"@types/node-fetch": "^2.6.2",
 		"chai": "^4.3.7",
 		"ethers": "^5.7.2",
+		"express": "^4.18.2",
 		"hardhat": "^2.10.1",
 		"hardhat-gas-reporter": "^1.0.9",
 		"node-fetch": "^3.3.0",
