--- a/alNFT/frontend/package.json
+++ b/alNFT/frontend/package.json
@@ -17,9 +17,9 @@
 		"@next/swc-darwin-arm64": "^13.2.3",
 		"@rainbow-me/rainbowkit": "^0.8.1",
 		"alchemy-sdk": "^2.4.3",
+		"dotenv": "^16.0.3",
 		"ethers": "^5.7.2",
 		"express": "^4.18.2",
-		"fs": "^0.0.1-security",
 		"next": "13.1.2",
 		"openai": "^3.2.1",
 		"react": "18.2.0",
