--- a/alNFT/frontend/package.json
+++ b/alNFT/frontend/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "next start --legacy-peer-deps",
 		"lint": "next link",
 		"marketplace": "npx create-web3-dapp marketplace"
 	},
